Bugfix: map not showing up on search results page #32576675

--- a/views/themed/weatherph/webroot/css/theme.css
+++ b/views/themed/weatherph/webroot/css/theme.css
@@ -337,10 +337,6 @@ label[for="search-field"] {
     float: left;
 }
 
-.station-legend {
-    margin-top: 4px;
-}
-
 .station-legend > div {
     display: inline-block;
     height: 1em;
